Fixed gap for mobile devices

--- a/common.blocks/theme/theme.css
+++ b/common.blocks/theme/theme.css
@@ -96,7 +96,7 @@
   --gap: var(--space-xl);
 }
 
-@media only screen and (min-device-width: 480px){
+@media only screen and (max-device-width: 480px){
   .theme_gap_small {
     --gap: var(--space-s);
   }
